2008-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec (preview.force_utf_8): Add option.

	* data/glade/dialogs/preferences.glade:
	* gaupol/gtk/dialogs/preferences.py:
	Add force UTF-8 check box.

	* gaupol/agents/preview.py (PreviewAgent.get_temp_file_path)
	(PreviewAgent.preview): Add optional 'encoding' keyword argument.

	* gaupol/gtk/agents/preview.py (PreviewAgent.preview): Set encoding
	argument for preview to 'utf_8' if force_utf_8 is True.

	* gaupol/gtk/util.py (get_preview_command): New function.

	* gaupol/players.py: Add attribute 'command_utf_8'.

2008-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py (debug): Rename from 'check_contracts' now that it
	checks more than that. Initiliaze value from environment variable
	'GAUPOL_DEBUG', defaulting to False.

	* gaupol/enumeration.py (EnumerationItem.__cmp__):
	* gaupol/enumeration.py (Enumeration.__contains__):
	Delete methods for performance reasons if gaupol.debug is False.

	* gaupol/gtk/main.py: Remove --debug option.

2008-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/subtitle.py (__init__): Add optional keyword arguments 'mode'
	and 'framerate'.

	* gaupol/subtitle.py: Access the '_mode' attribute directly instead of
	accessing it as the property 'mode'.

2008-08-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/dialogs/language.glade:
	* gaupol/gtk/dialogs/language.py:
	Convert to landscape layout.

2008-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/page.py (Page._on_project_*): Call
	gaupol.gtk.util.iterate_main to update view.

2008-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/menu.py (MenuAgent): Update project actions on
	page-added and page-closed signals.

2008-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.in (Letter "O" in a number): Fix
	replacement.

2008-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec: Remove option 'smart_open_translation' and