@@ -1,3 +1,11 @@
+2008-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/contractual.py (Contractual.__new__): Delete entire method if
+	gaupol.debug is False.
+
+	* gaupol/deco.py (contractual): Return unaltered function if
+	gaupol.debug is False.
+
 2008-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* data/gaupol.gtk.conf.spec (preview.force_utf_8): Add option.
